plugins/formal-verification/testData/diagnostics/no_contracts/any.kt
fun <!VIPER_TEXT!>any_argument_return<!>(x: Any): Any {
    return x
}

fun <!VIPER_TEXT!>any_cast<!>(x: Int): Any {
    return x
}